test/ui/test/packages/syntactically-invalid-manifests/duplicate-entries/package.recnot

hey: "it's me",
hey: "it's me again",

more: { , "
